Revision history for HTML::StateTable

          - Fixed bug in filter values from related tables
          - Replaced maps with variables in CSS
          - Added Remainder cell trait
          - Improved construction in Manager
          - Changed event register method name in JS utils
          - Fixed author email address
          - Added a render and serialisation test
          - Registers scan with Util.Event
          - Prereq fixes

0.2.1     2024-11-27 20:15:10
          - Bumping version number
          - More guide related POD added
          - Completed POD
          - Cell rendering can handle embed markup
          - Update copyright year. Animate buttons in table render
          - Moved onReady function to utils
          - Rationalised JS package names
          - Renames JS files
          - Uses icons. Moves utf8 default characters to JS
          - Caption now optional first div
          - Fixes column reorder with selector in last column
          - Better errors. Modal popups. More buttons. Flexible tag names
          - Fixes resetting page to one when searching/filtering
          - Protection against Highcharts no being available
          - Unified dialog titles
          - Shiny buttons
          - Refreshing button styling
          - Better error handling
          - Set text colour in LESS
          - Only four table roles to doc
          - Only table roles left to POD
          - POD updates
          - Weakens request
          - Configurable now per user
          - Minor CSS improvements
          - Responsive tables
          - CSS fonts and svg icons
          - Starts animation role
          - Replaces rs store/fetch with util library calls
          - Adds tag sections
          - Adds messages to form role. Resets modifiers
          - Use unicode chars for bool cell trait
          - Adds bool cell trait
          - Adds support for the object view table
          - Chartable missing div fix
          - Row count fix