@@ -329,11 +329,13 @@ body {
         justify-content: space-between;
     }
     .dialog-close {
-        align-items: center; background: #grads[button-bg];
-        border-radius: 3px; box-shadow: 2px 2px 2px #colours[panel-shadow];
-        color: #colours[close]; cursor: pointer; display: inline-flex;
-        font-family: #fonts[system]; font-size: smaller; font-weight: bold;
-        height: 100%; margin-top: 2px; padding: 0 0.25rem;
+        background: #grads[button-bg]; border-radius: 3px;
+        box-shadow: 2px 2px 2px #colours[panel-shadow]; color: #colours[close];
+        cursor: pointer; font-family: #fonts[system]; font-size: smaller;
+        font-weight: bold;
+        .icon-wrapper {
+            align-items: center; display: flex; padding: 0.125rem;
+        }
         img, object {
             height: 16px; width: 16px; vertical-align: middle;
         }
@@ -362,12 +364,12 @@ body {
         font-family: #fonts[system]; font-size: 0.8rem; line-height: 1rem;
     }
     .dialog-title {
-        background: #colours[title-bg]; border-bottom: 1px solid;
-        border-color: #colours[title-border]; border-top-left-radius: 5px;
-        border-top-right-radius: 5px; color: #colours[text]; display: flex;
-        font-family: #fonts[system]; font-size: 1rem;
-        justify-content: space-between; min-width: @dialog-title-min-width;
-        padding: 0.25rem 0.5rem;
+        align-items: center; background: #colours[title-bg];
+        border-bottom: 1px solid; border-color: #colours[title-border];
+        border-top-left-radius: 5px; border-top-right-radius: 5px;
+        color: #colours[text]; display: flex; font-family: #fonts[system];
+        font-size: 1rem; justify-content: space-between;
+        min-width: @dialog-title-min-width; padding: 0.25rem 0.5rem;
     }
     .filter-label {
         display: inline-block; padding-left: 0.25rem;
